--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ html, body{
 * {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #fff;
+  letter-spacing: 1px;
 }
 
 body{
@@ -242,4 +243,40 @@ body{
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+}
+
+.gridViewItem a{
+  text-decoration: none;
+}
+
+.entityInfo{
+  padding: 40px 0 10px 0;
+  display: inline-block;
+  width: 100%;
+}
+
+.entityInfo .leftSection{
+  width: 30%;
+  float: left;
+  max-width: 250px;
+}
+
+.entityInfo .leftSection img{
+  width: 100%;
+}
+
+.entityInfo .rightSection{
+  width: 70%;
+  float: left;
+  padding: 5px 10px 5px 40px;
+  box-sizing: border-box;
+}
+
+.entityInfo .rightSection h2{
+  margin-top: 0px;
+}
+
+.entityInfo .rightSection p{
+  color: #939393;
+  font-weight: 200;
 }
