added search page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,3 +393,23 @@ body{
 [role="link"]{
   cursor: pointer;
 }
+
+.searchContainer{
+  background-color: #242424;
+  padding: 20px 28px;
+}
+
+.searchContainer h4{
+  maring: 0;
+  font-weight: 300;
+}
+
+.searchInput{
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  font-weight: 700;
+  font-size: 62px;
+  letter-spacing: 2px;
+}
