--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -13,6 +13,7 @@ body{
   display: table;
   height: 100%;
   width: 100%;
+  position: relative;
 }
 
 #loginContainer * {
@@ -26,8 +27,13 @@ body{
 #loginContainer{
   width: 80%;
   margin: 0 auto;
-  position: relative;
+  position: absolute;
   max-width: 1024px;
+  background-color: #282828;
+  opacity: 0.7;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
